--- a/src/Modules/Laser.Orchard.NwazetIntegration/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/App_Data/Localization/it-IT/orchard.module.po
@@ -1,5 +1,5 @@
 ﻿# Orchard resource strings - it-IT
-# Copyright (c) 2021 Laser s.r.l.
+# Copyright (c) 2022 Laser s.r.l.
 
 
 # > #: msgctxt { contesto del messaggio - Originale }
@@ -624,6 +624,30 @@ msgctxt "~/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Address
 msgid "Title or honorific, e.g. Mr., Mrs., Dr., San, etc."
 msgstr "Titolo o onorifico, e.g. Sig., Dott., etc."
 
+msgctxt "~/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/EcommerceAnalyticsSettings.cshtml"
+msgid "Choose the level of cookies of Ecommerce Analitics."
+msgstr "Seleziona il livello dei cookies di Ecommerce Analytics."
+
+msgctxt "~/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/EcommerceAnalyticsSettings.cshtml"
+msgid "Ecommerce Analitics Cookie Level"
+msgstr "Livello dei Cookie di Ecommerce Analytics."
+
+msgctxt "~/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/EcommerceAnalyticsSettings.cshtml"
+msgid "Marketing"
+msgstr "Marketing"
+
+msgctxt "~/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/EcommerceAnalyticsSettings.cshtml"
+msgid "Preferences"
+msgstr "Preferenze"
+
+msgctxt "~/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/EcommerceAnalyticsSettings.cshtml"
+msgid "Statistical"
+msgstr "Statistici"
+
+msgctxt "~/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/EcommerceAnalyticsSettings.cshtml"
+msgid "Technical"
+msgstr "Tecnici"
+
 msgctxt "~/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/FacebookShopProductPartEditor.cshtml"
 msgid "Keep the product synchronized with Facebook Shop every time the product is published."
 msgstr "Mantieni il prodotto sincronizzato nel negozio di Facebook ogni volta che viene pubblicato."
@@ -673,6 +697,10 @@ msgid "Date"
 msgstr "Data"
 
 msgctxt "~/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/Order.PaymentInfo.cshtml"
+msgid "Edit"
+msgstr "Modifica"
+
+msgctxt "~/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/Order.PaymentInfo.cshtml"
 msgid "Error"
 msgstr "Errore"
 
@@ -702,6 +730,10 @@ msgstr "Riuscito"
 
 msgctxt "~/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/Order.PaymentInfo.cshtml"
 msgid "Transacion ID"
+msgstr "ID Transazione"
+
+msgctxt "~/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/Order.PaymentInfo.cshtml"
+msgid "Transaction ID"
 msgstr "ID Transazione"
 
 msgctxt "~/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/ProductPriceWithVATEditor.cshtml"
@@ -1125,6 +1157,10 @@ msgid "At least one line is a product of the given category or one of its childr
 msgstr "Almeno una riga è un prodotto della categoria indicata o una delle sue sottocategorie."
 
 msgctxt "Laser.Orchard.NwazetIntegration.ApplicabilityCriteria.CartHasProductWithTermCouponApplicabilityCriterion"
+msgid "At least one line is a product of the given category."
+msgstr "Almeno una riga è un prodotto della categoria selezionata."
+
+msgctxt "Laser.Orchard.NwazetIntegration.ApplicabilityCriteria.CartHasProductWithTermCouponApplicabilityCriterion"
 msgid "At least one lines are a products of the given category."
 msgstr "Almeno una riga è un prodotto della categoria indicata."
 
@@ -1143,6 +1179,14 @@ msgstr "Le righe del carrello non sono prodotti della categoria indicata o una d
 msgctxt "Laser.Orchard.NwazetIntegration.ApplicabilityCriteria.CartHasProductWithTermCouponApplicabilityCriterion"
 msgid "Cart lines are not products of the given category."
 msgstr "Le righe del carrello non sono prodotti della categoria indicata."
+
+msgctxt "Laser.Orchard.NwazetIntegration.ApplicabilityCriteria.CartHasProductWithTermCouponApplicabilityCriterion"
+msgid "Cart lines are products of the given category or one of its children."
+msgstr "Le righe del carrello sono prodotti della categoria selezionata o di una delle sue sottocategorie."
+
+msgctxt "Laser.Orchard.NwazetIntegration.ApplicabilityCriteria.CartHasProductWithTermCouponApplicabilityCriterion"
+msgid "Cart lines are products of the given category."
+msgstr "Le righe del carrello sono prodotti della categoria selezionata."
 
 msgctxt "Laser.Orchard.NwazetIntegration.ApplicabilityCriteria.CartHasProductWithTermCouponApplicabilityCriterion"
 msgid "Cart products"
@@ -1512,6 +1556,10 @@ msgctxt "Laser.Orchard.NwazetIntegration.Drivers.OrderPartDriver"
 msgid "Cannot manage orders"
 msgstr "Impossibile gestire gli ordini"
 
+msgctxt "Laser.Orchard.NwazetIntegration.Drivers.OrderPartDriver"
+msgid "Transaction id changed from {0} to {1}"
+msgstr "Id transazione modificato da {0} a {1}"
+
 msgctxt "Laser.Orchard.NwazetIntegration.Drivers.TerritoryAdministrativeTypePartDriver"
 msgid "City"
 msgstr "Città"
@@ -1709,6 +1757,10 @@ msgid "{0} products synchronized on Facebook Shop."
 msgstr "{0} prodotti sincronizzati sul negozio di Facebook"
 
 msgctxt "Laser.Orchard.NwazetIntegration.Services.FacebookShop.FacebookShopService"
+msgid "Error when checking Facebook Shop handle"
+msgstr "Errore durante la verifica dell'handle di Facebook Shop"
+
+msgctxt "Laser.Orchard.NwazetIntegration.Services.FacebookShop.FacebookShopService"
 msgid "Invalid data"
 msgstr "Dati non validi"
 
@@ -1723,6 +1775,10 @@ msgstr "Indirizzo dell'immagine non valido"
 msgctxt "Laser.Orchard.NwazetIntegration.Services.FacebookShop.FacebookShopService"
 msgid "Invalid product description (body part not found)"
 msgstr "Descrizione del prodotto non valida (parte corpo non trovata)"
+
+msgctxt "Laser.Orchard.NwazetIntegration.Services.FacebookShop.FacebookShopService"
+msgid "Invalid product description (description must not be all upper case)"
+msgstr "Descrizione del prodotto non valida (la descrizione non deve essere tutta in maiuscolo)"
 
 msgctxt "Laser.Orchard.NwazetIntegration.Services.FacebookShop.FacebookShopService"
 msgid "Invalid Product part or Facebook part."
@@ -1751,6 +1807,10 @@ msgstr "Parte prodotto o parte Facebook non valide."
 msgctxt "Laser.Orchard.NwazetIntegration.Services.PaymentStatusProvider"
 msgid "Payment Failed"
 msgstr "Pagamento Fallito"
+
+msgctxt "Laser.Orchard.NwazetIntegration.Services.PaymentStatusProvider"
+msgid "Payment Pending"
+msgstr "Pagamento in sospeso"
 
 msgctxt "Laser.Orchard.NwazetIntegration.Services.PaymentStatusProvider"
 msgid "Payment Succeeded"
