--- a/src/Modules/Laser.Orchard.Reporting/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.Reporting/App_Data/Localization/it-IT/orchard.module.po
@@ -1,5 +1,5 @@
 ﻿# Orchard resource strings - it-IT
-# Copyright (c) 2021 Laser s.r.l.
+# Copyright (c) 2022 Laser s.r.l.
 
 
 # > #: msgctxt { contesto del messaggio - Originale }
@@ -145,6 +145,10 @@ msgid "Specify the column names to be shown in the report, separated by a comma.
 msgstr "Specificare i nomi delle colonne da mostrare nel report, separati da virgola. Il report mostrerà, per ogni riga, solo i valori corrispondenti alle colonne specificate, nell'ordine in cui sono scritte. Se non viene specificato alcun nome di colonna, il report mostrerà le colonne così come definite dalla query."
 
 msgctxt "~/Modules/Laser.Orchard.Reporting/Views/Report/CreateHql.cshtml"
+msgid "Specify the column names to be shown in the report, separated by a comma. The report will then show, for each data row, only values corresponding to these columns, in the order given. If this is empty, the report will compute the column aliases based on the query. For details <a href=\"https://github.com/LaserSrl/Laser.Orchard.Platform/tree/master/src/Modules/Laser.Orchard.Reporting\">click here.</a>"
+msgstr "Specifica il nome delle colonne da visualizzare nel report, separate da una virgola. Il report visualizzerà, per ogni riga, solo i valori che corrispondono alle colonne indicate, nell'ordine indicato. Se questo campo è vuoto, il report genererà i nomi delle colonne in base alla query. Per dettagli <a href=\"https://github.com/LaserSrl/Laser.Orchard.Platform/tree/master/src/Modules/Laser.Orchard.Reporting\">clicca qui.</a>"
+
+msgctxt "~/Modules/Laser.Orchard.Reporting/Views/Report/CreateHql.cshtml"
 msgid "Title"
 msgstr "Titolo"
 
@@ -263,6 +267,10 @@ msgstr "Salva"
 msgctxt "~/Modules/Laser.Orchard.Reporting/Views/Report/EditHql.cshtml"
 msgid "Specify the column names to be shown in the report, separated by a comma. The report will then show, for each data row, only values corresponding to these columns, in the order given. If this is empty, the report will compute the column aliases based on the query."
 msgstr "Specificare i nomi delle colonne da mostrare nel report, separati da virgola. Il report mostrerà, per ogni riga, solo i valori corrispondenti alle colonne specificate, nell'ordine in cui sono scritte. Se non viene specificato alcun nome di colonna, il report mostrerà le colonne così come definite dalla query."
+
+msgctxt "~/Modules/Laser.Orchard.Reporting/Views/Report/EditHql.cshtml"
+msgid "Specify the column names to be shown in the report, separated by a comma. The report will then show, for each data row, only values corresponding to these columns, in the order given. If this is empty, the report will compute the column aliases based on the query. For details <a href=\"https://github.com/LaserSrl/Laser.Orchard.Platform/tree/master/src/Modules/Laser.Orchard.Reporting\">click here.</a>"
+msgstr "Specifica il nome delle colonne da visualizzare nel report, separate da una virgola. Il report visualizzerà, per ogni riga, solo i valori che corrispondono alle colonne indicate, nell'ordine indicato. Se questo campo è vuoto, il report genererà i nomi delle colonne in base alla query. Per dettagli <a href=\"https://github.com/LaserSrl/Laser.Orchard.Platform/tree/master/src/Modules/Laser.Orchard.Reporting\">clicca qui.</a>"
 
 msgctxt "~/Modules/Laser.Orchard.Reporting/Views/Report/EditHql.cshtml"
 msgid "Title"
