--- a/src/Modules/Laser.Orchard.SEO/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.SEO/App_Data/Localization/it-IT/orchard.module.po
@@ -324,6 +324,22 @@ msgctxt "~/Modules/Laser.Orchard.SEO/Views/EditorTemplates/Parts/SEO.cshtml"
 msgid "TitleOverrideDescription"
 msgstr "ATTENZIONE: lascia vuoto questo campo per usare il normale titolo del contenuto."
 
+msgctxt "~/Modules/Laser.Orchard.SEO/Views/EditorTemplates/Parts/SeoSiteSettings.cshtml"
+msgid "Canonical Url"
+msgstr "Url Canonico"
+
+msgctxt "~/Modules/Laser.Orchard.SEO/Views/EditorTemplates/Parts/SeoSiteSettings.cshtml"
+msgid "Canonical url es: {Site.BaseUrl}{Content.DisplayUrl}"
+msgstr "Url Canonico es: {Site.BaseUrl}{Content.DisplayUrl}"
+
+msgctxt "~/Modules/Laser.Orchard.SEO/Views/EditorTemplates/Parts/SeoSiteSettings.cshtml"
+msgid "Canonical Url."
+msgstr "Url Canonico."
+
+msgctxt "~/Modules/Laser.Orchard.SEO/Views/EditorTemplates/Parts/SeoSiteSettings.cshtml"
+msgid "SEO settings for all content"
+msgstr "Configurazione SEO per tutti i contenuti"
+
 msgctxt "~/Modules/Laser.Orchard.SEO/Views/RedirectsAdmin/Add.cshtml"
 msgid "Add new Redirect rule"
 msgstr "Aggiungi una nuova regola di Redirect"
