--- a/src/Modules/Laser.Orchard.HiddenFields/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.HiddenFields/App_Data/Localization/it-IT/orchard.module.po
@@ -204,3 +204,15 @@ msgctxt "Laser.Orchard.HiddenFields.Services.HiddenStringFieldUpdateProcessor"
 msgid "None"
 msgstr "Nessuno"
 
+msgctxt "Laser.Orchard.HiddenFields.Settings.HiddenStringFieldsSettingsEvents"
+msgid "All fields"
+msgstr "Tutti i campi"
+
+msgctxt "Laser.Orchard.HiddenFields.Settings.HiddenStringFieldsSettingsEvents"
+msgid "Empty fields"
+msgstr "Campi vuoti"
+
+msgctxt "Laser.Orchard.HiddenFields.Settings.HiddenStringFieldsSettingsEvents"
+msgid "None"
+msgstr "Nessuno"
+
