--- a/src/Modules/Laser.Orchard.Maps/App_Data/Localization/it-IT/orchard.module.po
+++ b/src/Modules/Laser.Orchard.Maps/App_Data/Localization/it-IT/orchard.module.po
@@ -125,6 +125,10 @@ msgid "Map Fields"
 msgstr "Definizione della Mappa"
 
 msgctxt "~/Modules/Laser.Orchard.Maps/Views/EditorTemplates/Parts/Map.cshtml"
+msgid "Reset Coords"
+msgstr "Reimposta Coordinate"
+
+msgctxt "~/Modules/Laser.Orchard.Maps/Views/EditorTemplates/Parts/Map.cshtml"
 msgid "Show Coords"
 msgstr "Mostra coordinate"
 
